tests/bad/formatting_attr_args_no_dollar.oc
/// fail: Second argument of formatting attribute must contain '$'

[formatting "%d => %d" "lol"]
struct Foo {
    x, y: i32
}

def main() => 0